# competitive-programming

./: .gitignore  CMakeLists.txt  def.hpp
Tests/: CMakeLists.txt  CartesianTree_test.cpp  segment_tree_test.cpp
data-structures/: CartesianTree.hpp  segment_tree.hpp
